﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.020005 2014-10-03T07:04:22Z
 [Bugfix]
 - dep_changes.pl: Use a flattened key value because the previous release started segv-ing and eating all my ram
   shortly after release.

 [Utils]
 - dep_changes.pl: Shard out LMDB namespaces to distinct DBs till I can work out a better way to see wtf is going on
   inside them.

2.020004 2014-10-03T06:41:47Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020003, see misc/*.deps* for details
 - develop: ↑4
 - runtime: ↑8 (recommends: +2 -2)
 - test: ↑1 (recommends: ↑1)

 [Utils]
 - dep_changes.pl : Use LMDB driver by default
 - dep_changes.pl : Add several more levels of advanced caching for blazing fast performance.

2.020003 2014-09-23T14:54:27Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020002, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

 [Minting]
 - Minted dist.ini's don't default to wrong twitter hash tag syntax.

2.020002 2014-09-20T21:00:28Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020001, see misc/*.deps* for details
 - develop: ↑8
 - runtime: ↑12
 - test: ↑2

 [Utils]
 - dep_changes: Enable LMDB Backend as an option.
 - dep_changes: Cleanup CHI code to be more efficient and understandable.
 - dep_changes: Be more graceful about 'releases' branch being missing.

2.020001 2014-09-06T03:22:12Z
 [Bugfix]
 - dont set git_versions in new dists.
 - add dump_config to MinimumPerl

 [Dependencies::Stats]
 - Dependencies changed since 2.020000, see misc/*.deps* for details
 - develop: ↑7
 - runtime: +1 ↑10
 - test: ↑1 (recommends: ↑1)

 [Metadata]
 - Specifiy an email address for copyright holder.

2.020000 2014-08-20T15:50:05Z
 [00 Major]
 - 'git_versions' is now both optional, and an ignored parameter.
 - 'normal_form' is now optional, and defaults to 'numify'
 - 'mantissa' is now optional, and defautls to 6.
 - Discrepancies with any of the above will be offloaded into the RecommendChanges plugin.

 [Dependencies::Stats]