@@ -80,7 +80,9 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.020004
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.021000
+
+[Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -186,6 +188,7 @@ Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::Prereqs = 0
+Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::ReadmeFromPod = 0
@@ -224,8 +227,6 @@ Test::Pod::Coverage = 1.08
 Test::EOL = 1.5
 namespace::autoclean = 0.15
 Test::Perl::Critic = 1.02
-
-[Prereqs::AuthorDeps]
 
 [RemovePhasedPrereqs]
 remove_runtime = Dist::Zilla::PluginBundle::Author::KENTNL
